@startuml MatchStateMachine
[*] --> Scheduled
Scheduled --> In_play
In_play --> Drawing: MatchStarted

Drawing --> Finished: MatchEnded

state TeamWinning {
    Drawing --> TeamLeadByOne: TeamScored
    
    TeamLeadByOne --> Drawing: TeamConceded
    TeamLeadByOne --> TeamExtendingLead: TeamScored
    TeamLeadByOne --> Finished: MatchEnded

    TeamExtendingLead --> TeamLosingLead: TeamConceded
    TeamExtendingLead --> TeamExtendingLead: TeamScored
    TeamExtendingLead --> Finished: MatchEnded

    TeamLosingLead --> Drawing: TeamConceded
    TeamLosingLead --> TeamLosingLead: TeamConceded
    TeamLosingLead --> TeamExtendingLead: TeamScored
    TeamLosingLead --> Finished: MatchEnded
}

state TeamLosing {
    Drawing --> TeamDeficitOfOne: TeamConceded
    
    TeamDeficitOfOne --> Drawing: TeamScored
    TeamDeficitOfOne --> TeamExtendingDeficit: TeamConceded
    TeamDeficitOfOne --> Finished: MatchEnded

    TeamExtendingDeficit --> TeamLosingDeficit: TeamScored
    TeamExtendingDeficit --> TeamExtendingDeficit: TeamConceded
    TeamExtendingDeficit --> Finished: Match Ended

    TeamLosingDeficit --> Drawing: TeamConceded
    TeamLosingDeficit --> TeamLosingDeficit: TeamScored
    TeamLosingDeficit --> TeamExtendingDeficit: TeamConceded
    TeamLosingDeficit --> Finished: MatchEnded
}

Finished --> [*]
@enduml
